# core-api-gateway

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-ghcr.yml
app/: auth.py  config.py  main.py  middleware.py  proxy.py
tests/: test_app.py
